ec2/ec2.cf.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Create a virtual machine to host Docker Swarm for demo stacks

Parameters:
  AvailabilityZone:
    Type: AWS::EC2::AvailabilityZone::Name
    Default: eu-central-1a
  InstanceType:
    Description: "Specify the instance type"
    Type: String
    Default: t2.nano
    AllowedValues:
      - t2.nano
      - t2.micro
      - t2.small
  AmiID:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Description: "The ID of the AMI."
    Default: /aws/service/canonical/ubuntu/server/20.04/stable/current/amd64/hvm/ebs-gp2/ami-id
    # aws ssm get-parameters-by-path --path /aws/service/canonical/ubuntu/server/20.04/stable/current/amd64 --recursive --query 'Parameters[].Name'
  KeyPairName:
    Type: String
    Description: The name of an existing Amazon EC2 key pair in this region to use to SSH into the Amazon EC2 instances.
    Default: greet-ec2-key

Resources:
  GreetDemoInstance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: !Ref AvailabilityZone
      ImageId: !Ref AmiID
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
        - !Ref GreetDemoSecurityGroup

  GreetDemoSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: greet-demo-ec2-security-group
      GroupDescription: "Allow HTTP/HTTPS and SSH inbound and outbound traffic"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  GreetDemoEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref GreetDemoInstance
      Tags:
        - Key: Name
          Value: greet-demo-ec2-eip

Outputs:
  WebsiteURL:
    Value: !Sub http://${GreetDemoEIP}
    Description: GreetDemo EC2 URL
